fix broken layout

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -137,6 +137,9 @@ $menu-label-color: $white-ter
   content: ''
   background: linear-gradient(to bottom, rgba(69, 69, 69, 0.3) 0%, rgba(255, 255, 255, 0) 100%)
 
+.footer .columns
+  width: 100%
+
 
 @import "~bulma"
 
